--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "pytubefix>=9.5.0",
     "streamlit>=1.46.1",
     "tiktoken>=0.9.0",
+    "youtube-transcript-api>=1.2.2",
 ]
